Trying to fix modal on IOS Safari

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -302,7 +302,11 @@ body.dark-theme {
 }
 
 .body.body-hidden {
+	touch-action: none;
+	-webkit-overflow-scrolling: none;
 	overflow: hidden;
+
+	overscroll-behavior: none;
 }
 
 /* 			change header color */
